mock layout of rules

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 #leader-container {
 	width: 1170px !important;
 }
-#leader-container {
+#leader-container, #rules-container {
 	margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
@@ -14,4 +14,13 @@
 }
 #row-tabs {
 	border-top: 1px solid lightgray;
+}
+#rules-container {
+	width: 1170px;
+	margin-right: auto;
+	margin-left: auto;
+}
+.img-width {
+	max-width: 500px;
+	margin-left: 4% !important;
 }
