changed to cpp colors

--- a/css/custom.css
+++ b/css/custom.css
@@ -25,6 +25,9 @@
 	margin-left: 4% !important;
 }
 .header {
-	color: gold;
+	color: rgb(0, 135, 23);
 	font-weight: 300;
+}
+.nav-colors {
+	background-color: rgb(0, 135, 23); 
 }
