--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 2%;
+    margin-top: 1%;
     background: white;
 }
 #body-background {
@@ -61,4 +61,10 @@
 }
 #leaderboards, #hackathons, #rules {
 	cursor: pointer;
+}
+#search-bar {
+	margin-right: auto;
+    margin-left: auto;
+	width: 1170px;
+	margin-top: 1%;
 }
