--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,23 @@
 #leader-container, #hacks-container, #rules-container {
 	width: 1170px;
 }
-#hacks-container, #rules-container {
+#leader-container, #rules-container, #register-container {
 	display: none;
 }
-#leader-container{
+#register-container {
 	margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 1%;
+    margin-top: 6%;
+    width: 500px;
+}
+#leader-container {
+	margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 6%;
     background: white;
 }
 #rules-container, #hacks-container {
@@ -17,7 +25,7 @@
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 1%;
+    margin-top: 6%;
 }
 #body-background {
 	/*background: lightgray;*/
@@ -71,25 +79,20 @@
 #leaderboards, #hackathons, #rules {
 	cursor: pointer;
 }
-#search-bar {
-	margin-right: auto;
-    margin-left: auto;
-	width: 1170px;
-	margin-top: 1%;
-}
-#login-register {
-	height: 50px;
+
+.login-register {
+	line-height: 35px !important;
 }
 #login {
 	float: right;
-	margin-top: 7px;
+	margin-top: 13px;
 	margin-left: 5px;
 	margin-right: 5px;
 	background-color: #ffa500;
 }
 #register {
 	float: right;
-	margin-top: 7px;
+	margin-top: 13px;
 	background-color: #ffa500;
 }
 #cyber-logo {
@@ -97,4 +100,32 @@
 }
 .hacks-color{
 	background-color: #212121;
+}
+#fixed-nav {
+	position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+}
+.input-field input[type=search] {
+  display: block;
+  line-height: inherit;
+  padding-left: 4rem;
+  width: calc(100% - 4rem);
+}
+.input-field {
+  position: relative;
+  min-width: 300px;
+	overflow: hidden;
+  margin-top: 1rem;
+}
+.input-field input[type=search] ~ .mdi-navigation-close {
+  position: absolute;
+  top: 0;
+  right: 1rem;
+  color: transparent;
+  cursor: pointer;
+  font-size: 2rem;
+  transition: .3s color;
 }
